@@ -94,7 +94,8 @@ module Development.Shake(
     liftIO, actionOnException, actionFinally,
     ShakeException(..),
     -- * Configuration
-    ShakeOptions(..), Assume(..), Lint(..), Change(..), getShakeOptions, getHashedShakeVersion,
+    ShakeOptions(..), Assume(..), Lint(..), Change(..),
+    getShakeOptions, getShakeOptionsRules, getHashedShakeVersion,
     -- ** Command line
     shakeArgs, shakeArgsWith, shakeOptDescrs,
     -- ** Progress reporting
