@@ -1,5 +1,6 @@
 Changelog for Shake
 
+    Add getShakeOptionsRules, to get ShakeOptions in Rules
     #479, improve the robustness of the Pool tests
     #481, document how to raise errors in Action
     Delete the deprecated system* functions
